ispCP ω 1.0.4 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-01-07 Peter Ziergöbel
	- GUI:
		* Fixed #2125: Domain exire date can't set to "Never" (N/A) when it changed

2010-01-12 Benedikt Heintel
	- ENGINE:
		* Fixed #2091: Make use of the BASE_SERVER_VHOST_PREFIX in ispcp-dmn-mngr for default pages
	- GUI:
		* Fixed #1121: Support System (review)

2010-01-12 Sascha Bay
	- GUI:
		* Fixed #2124: Errors in Layout Settings
		* Fixed #2144: Wrong Option declaration in Admin (reseller_edit.php)
		* Fixed #2151: Adding user and exceeding mail account from reseller won't work correct
		* Fixed #2153: Changing userlogo upload and deleting userlogo won't work
		* Fixed #2154: Reseller Overview shows -1 if function is disabled
		* Fixed #2157: Admin Option "Count default E-Mail addresses" work not correct

2010-01-12 Laurent Declercq
	- GUI:
		* Fixed #2118: The button "Show default E-mail addresses" should be hidden if the default mail addresses do not exists.
		* Fixed #2147: Not correct mail users count
		* Enhancement: Show/hide the mails addresses created by default is now possible

2010-01-12 Christian Hernmarck
	- CONFIGS:
		* Fixed #2149: tar [etch] does not understand --lzma (or --xz) -> info in config

2010-01-11 Christian Hernmarck
	- ENGINE:
		* Fixed #2021: Error in backup (part II: tar-file and logfile not in backup directory)

2010-01-10 Thomas Wacker
	- GUI:
		* Fixed #2127: Update hosting package works wrong

2010-01-07 Peter Ziergöbel
	- GUI:
		* Fixed #1994: Domain expiration in client's General information

2010-01-06 Laurent Declercq
	- PACKAGE:
		* Updates all Licenses Headers
		* Added license headers in some files
	- ENGINE:
		* Fixed #2146: Bind9 - configuration file - twice header/entries
		* Indenting code - Alignment (80 chars per line)
		* Added headers  for subroutines - (Some should be commented)
		* Code optimization - Useless invocation of subroutines get_conf()
	- SETUP