@@ -1,6 +1,10 @@
 ispCP ω 1.0.4 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2010-01-12 Thomas Wacker
+	- GUI:
+		* Fixed #2158: Wrong calculation for traffic in update hosting plan
+
 2010-01-07 Peter Ziergöbel
 	- GUI:
 		* Fixed #2125: Domain exire date can't set to "Never" (N/A) when it changed
